[metadata]
# replace with your username:
name = meshslice
version = 0.0.3
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Slicer for 3D Meshes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lsawade/meshslice
project_urls =
    Documentation = 
    TravisCI = https://travis-ci.com/github/lsawade/meshslice
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Learning, Programming

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =  
    numpy
    matplotlib
    pyvista
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = sphinx;
tests = pytest; py

[options.entry_points]
console_scripts =
    sample-bin = matpy.bins.sample_bin:main

[options.packages.find]
where = src